# pytz-deprecation-shim

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  MANIFEST.in  README.rst  codecov.yml  conftest.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml  python-tests.yml
docs/: api.rst  conf.py  helpers.rst  index.rst  migration.rst  requirements.txt
scripts/: update_test_data.py
src/pytz_deprecation_shim/: __init__.py  _compat.py  _compat_py2.py  _compat_py3.py  _exceptions.py  _impl.py  helpers.py
tests/: _common.py  _zoneinfo_data.py  test_errors.py  test_helpers.py  test_pytz_equivalent.py  test_shims.py
tests/data/: zoneinfo_data.json
