[metadata]
name = pytz_deprecation_shim
version = file:VERSION
description = Shims to make deprecation of pytz easier
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pganssle/pytz-deprecation-shim
author = Paul Ganssle
author_email = paul@ganssle.io
license = Apache-2.0
license_file = LICENSE
license_files =
    LICENSE
    licenses/LICENSE_APACHE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/pganssle/pytz-deprecation-shim
    Bug Reports = https://github.com/pganssle/pytz-deprecation-shim/issues
    Documentation = https://pytz-deprecation-shim.readthedocs.io

[options]
packages = pytz_deprecation_shim
install_requires =
    backports.zoneinfo;python_version>="3.6" and python_version<"3.9"
    python-dateutil;python_version<"3.6"
    tzdata;python_version>="3.6"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
package_dir =
    =src

[tool:pytest]
xfail_strict = True

[bdist_wheel]
universal = 1
